--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
       </div>
     </section>
-    <div class="flex gap-24 absolute h-64 -mt-32 ">
+    <div class="flex gap-24 absolute h-64 -mt-32 bg-white ml-32 ">
       <div>
         <img src="images/fruit1.png" alt="">
       </div>
@@ -134,6 +134,40 @@
         <img src="images/fruit5.png" alt="">
       </div>
     </div>
+    <section class="flex justify-between mt-36">
+      <div>
+        <h3 class="font-lato text-5xl text-[#121212] font-extrabold  ">
+          Deal of the day
+        </h3>
+        <p class="font-lato text-[#121212] text-base font-medium">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+      </div>
+      <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+        <div class="flex flex-col">
+          <span class="countdown font-lato font-extrabold text-5xl">
+            <span style="--value:29;"></span> &nbsp; :
+          </span>
+          Days 
+        </div> 
+        <div class="flex flex-col text-[#121212]">
+          <span class="countdown font-lato font-extrabold text-5xl ">
+            <span style="--value:15;"></span> &nbsp; :
+          </span>
+          Hours 
+        </div> 
+        <div class="flex flex-col">
+          <span class="countdown font-lato font-extrabold text-5xl">
+            <span style="--value:25;"></span> &nbsp; :
+          </span>
+          Min 
+        </div> 
+        <div class="flex flex-col">
+          <span class="countdown font-lato font-extrabold text-5xl">
+            <span style="--value:08;"></span> &nbsp; :
+          </span>
+          Sec 
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 
